Bug 389765 - Export from Spectacle to device via KDE Connect stalls
Summary: Export from Spectacle to device via KDE Connect stalls
Status: RESOLVED FIXED
Alias: None
Product: frameworks-purpose
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-01 19:43 UTC by mihael.vercek
Modified: 2018-06-08 15:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
video of the bug (2.42 MB, video/mp4)
2018-05-09 22:52 UTC, mihael.vercek
Details
video in webm format (1.19 MB, video/webm)
2018-05-09 22:59 UTC, mihael.vercek
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mihael.vercek 2018-02-01 19:43:26 UTC
I take screenshot with Spectatcle on Kubuntu 17.10 then choose "export picture" then I choose my phone connected via KDE Connect then little progress window appears but it's stopped at 0 %
Comment 1 Aleix Pol 2018-04-19 16:47:34 UTC
I've been trying to reproduce but I haven't been able to. Any further information would be very helpful.

Maybe you can try doing it through kdeconnect-cli --share and see what's the result.

Thanks!
Comment 2 Christoph Feck 2018-05-09 22:21:07 UTC
If you can provide the information requested in comment #1, please add it.
Comment 3 mihael.vercek 2018-05-09 22:52:45 UTC
Created attachment 112552 [details]
video of the bug

I took a video descriping the problem
Comment 4 mihael.vercek 2018-05-09 22:59:59 UTC
Created attachment 112553 [details]
video in webm format
Comment 5 Christoph Feck 2018-05-10 00:35:26 UTC
Thanks for the update; changing status.
Comment 6 Aleix Pol 2018-05-14 23:16:05 UTC
Git commit 46011e38a1bbe8840cd2d17e531b39838967f896 by Aleix Pol.
Committed on 14/05/2018 at 23:15.
Pushed by apol into branch 'master'.

kdeconnect: Notify when the process fails to start

M  +10   -0    src/plugins/kdeconnect/kdeconnectplugin.cpp

https://commits.kde.org/purpose/46011e38a1bbe8840cd2d17e531b39838967f896
Comment 7 Aleix Pol 2018-06-08 15:02:20 UTC
Git commit 7c96d3a248f4ce6960f52618aa0b6583c51e4185 by Aleix Pol.
Committed on 08/06/2018 at 15:01.
Pushed by apol into branch 'master'.

Adopt a more reasonable approach for passing the file to purpose

Summary:
Put the file into a temp file instead of passing as a huge data: uri.

Test Plan: Reproduced the mentioned bug, can't reproduce with the patch anymore.

Reviewers: #plasma

Subscribers: nicolasfella

Differential Revision: https://phabricator.kde.org/D12883

M  +0    -19   src/ExportManager.cpp
M  +0    -1    src/ExportManager.h
M  +1    -1    src/Gui/ExportMenu.cpp

https://commits.kde.org/spectacle/7c96d3a248f4ce6960f52618aa0b6583c51e4185