Adopt a more reasonable approach for passing the file to purpose

Summary:
Put the file into a temp file instead of passing as a huge data: uri.

BUG: 389765

Test Plan: Reproduced the mentioned bug, can't reproduce with the patch anymore.

Reviewers: #plasma

Subscribers: nicolasfella

Differential Revision: https://phabricator.kde.org/D12883