src/Gui/ExportMenu.cpp
@@ -193,7 +193,7 @@ void ExportMenu::loadPurposeItems()
     }
 
     // updated image available, we lazily load it now
-    QString dataUri = ExportManager::instance()->pixmapDataUri();
+    QString dataUri = ExportManager::instance()->tempSave().toString();
     mUpdatedImageAvailable = false;
 
     mPurposeMenu->model()->setInputData(QJsonObject {
